Added gitignore file

--- a/HDOffice365Bot/Web.config
+++ b/HDOffice365Bot/Web.config
@@ -6,10 +6,10 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
-    <add key="BotId" value="" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
-    <add key="MSCognitiveServicesKey" value=""/>
+    <add key="BotId" value="hdoffice365" />
+    <add key="MicrosoftAppId" value="e7d6f805-67c1-49cb-94eb-f4dc5430f0e7" />
+    <add key="MicrosoftAppPassword" value="bT27Ftt9iNTEjyVxYZzqrRM" />
+    <add key="MSCognitiveServicesKey" value="0b885f27326c45d58974b3f6c668badc"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
