--- a/HDOffice365Bot/HDOffice365Bot.csproj
+++ b/HDOffice365Bot/HDOffice365Bot.csproj
@@ -129,6 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include=".gitignore" />
     <None Include="Properties\PublishProfiles\HDOffice365Bot - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
